--- a/style.css
+++ b/style.css
@@ -1,49 +1,75 @@
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(73, 73, 73);
+
+}
+
+
+.container {
+    position: relative;
+    width: 640px;
+    height: 360px;
+}
+
+.video {
+    width: 100%;
+
+}
+
+.controle {
+
+    position: absolute;
+    top: 90%;
+    transform: translateY(-100%);
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    opacity: 0;
+    transition: 0.4s;
+
+}
+
+
+.video:hover+.controle,
+.controle:hover {
+    height: 15%;
+    opacity: 1;
+    background-color: rgba(220, 223, 219, 0.4);
+
+}
+
+
+
+.btn {
+    position: relative;
+    width: 30px;
+    padding: 10px;
+    text-align: center;
+
+}
+
+@media screen and (max-width: 700px) {
+
+    * {
+
+        overflow: hidden;
+    }
 
     body {
-        display: flex;
+        background-color: black;
         align-items: center;
-        justify-content: center;
-        height: 100vh;
-        width: 100vw;
-        background-color: rgb(73, 73, 73);
-
+        max-width: max-content;
     }
 
     .container {
-        position: relative;
-        width: 640px;
-        height: 360px;
+        width: 80%;
+        max-width: max-content;
+       
     }
-
-    .video {
-        width: 100%;
-
-    }
-
-    .controle {
-
-        position: absolute;
-        top: 90%;
-        transform: translateY(-100%);
-        width: 100%;
-        height: 10%;
-        text-align: center;
-        opacity: 0;
-        transition: 0.4s;
-
-    }
-
-
-    .video:hover+.controle,
-    .controle:hover {
-        height: 15%;
-        opacity: 1;
-        background-color: rgba(220, 223, 219, 0.4);
-     
-
-    }
-
-
 
     .btn {
         position: relative;
@@ -52,3 +78,51 @@
         text-align: center;
 
     }
+
+
+    .controle {
+        border: 1px solid white;
+        position: absolute;
+        top: 70%;
+
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+    .controle {
+        border: 1px solid white;
+        position: absolute;
+        top: 55%;
+        transform: translateY(-55%);
+        /* margin-left: 12px; */
+        
+
+    }
+
+    .btn {
+        position: relative;
+        width: 20px;
+        padding: 4px;
+
+
+    }
+
+    .video:hover+.controle,
+    .controle:hover {
+
+        width: 100%;
+        height: 7%;
+        opacity: 1;
+       border: none;
+       margin: none;
+
+
+    }
+    
+
+}
+
+
+
+    
